[gd_scene load_steps=7 format=2]

[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Model/buttons/worldButtons/WorldButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Control/interface/AddQnsSelectWorld.gd" type="Script" id=4]
[ext_resource path="res://View/Screens_Randy/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureRect

signal fade_finished

func fade_in():
	$AnimationPlayer.play(\"fade_in\")

func _on_AnimationPlayer_animation_finished(anim_name):
	emit_signal(\"fade_finished\")
"

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Header" parent="TemplateScreen" index="3"]
text = "ADD QUESTIONS"

[node name="PlayBoard" parent="." index="1"]
margin_top = 91.0
margin_right = 289.0
margin_bottom = -58.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 557.0
margin_bottom = 431.0

[node name="Label" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_right = 537.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Select World"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 43.0
margin_right = 537.0
margin_bottom = 411.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
margin_right = 537.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="LeftContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer" index="0"]
margin_right = 263.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="WorldButton #1" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer" index="0" instance=ExtResource( 2 )]
margin_right = 263.0
margin_bottom = 57.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #1"
expand_icon = true

[node name="WorldButton #3" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer" index="1" instance=ExtResource( 2 )]
margin_top = 77.0
margin_right = 263.0
margin_bottom = 134.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #3"
expand_icon = true

[node name="WorldButton #5" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer" index="2" instance=ExtResource( 2 )]
margin_top = 154.0
margin_right = 263.0
margin_bottom = 211.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #5"
expand_icon = true

[node name="WorldButton #7" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer" index="3" instance=ExtResource( 2 )]
margin_top = 231.0
margin_right = 263.0
margin_bottom = 288.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #7"
expand_icon = true

[node name="WorldButton #9" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer" index="4" instance=ExtResource( 2 )]
margin_top = 308.0
margin_right = 263.0
margin_bottom = 368.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #9"
expand_icon = true

[node name="RightContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer" index="1"]
margin_left = 273.0
margin_right = 537.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 21

[node name="WorldButton #2" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/RightContainer" index="0" instance=ExtResource( 2 )]
margin_right = 264.0
margin_bottom = 56.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #2"
expand_icon = true

[node name="WorldButton #4" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/RightContainer" index="1" instance=ExtResource( 2 )]
margin_top = 77.0
margin_right = 264.0
margin_bottom = 133.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #4"
expand_icon = true

[node name="WorldButton #6" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/RightContainer" index="2" instance=ExtResource( 2 )]
margin_top = 154.0
margin_right = 264.0
margin_bottom = 210.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #6"
expand_icon = true

[node name="WorldButton #8" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/RightContainer" index="3" instance=ExtResource( 2 )]
margin_top = 231.0
margin_right = 264.0
margin_bottom = 287.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #8"
expand_icon = true

[node name="WorldButton #10" parent="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/RightContainer" index="4" instance=ExtResource( 2 )]
margin_top = 308.0
margin_right = 264.0
margin_bottom = 368.0
rect_scale = Vector2( 1, 1 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "World #10"
expand_icon = true

[node name="FadeIn" parent="." index="4" instance=ExtResource( 6 )]
visible = false
script = SubResource( 1 )
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer/LeftContainer/WorldButton #1" to="." method="_on_WorldButton_1_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
